<resources>
    <string name="app_name">NASA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- bottom nav menu -->
    <string name="photo_dey">Фото дня</string>
    <string name="settings">Настройки</string>

    <!-- О приложении -->
    <string name="about_app">О приложении</string>
    <string name="personalization_app">Персонализация</string>
    <string name="cod_version">Код версии:</string>
    <string name="version">Версия:</string>

    <!-- Используемые как значение -->
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="day_before_yesterday">Позавчера</string>
    <string name="favourite">favourite</string>


    <!-- Википедия -->
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="search">Search</string>

    <!-- текста заголовка -->
    <string name="fab">Показать сегодня</string>

    <!-- Переключатель тем -->
    <string name="text_off">Светлая</string>
    <string name="text_on">Темная</string>
    <string name="switch_light_dark_theme">Светлая / Темная тема</string>
    <string name="pink_theme">Розовый</string>
    <string name="white_theme">Белый</string>
    <string name="green_theme">Зеленый</string>

    <!-- Для ViewPager -->
    <string name="earth_tab_text">Earth</string>
    <string name="mars_tab_text">Mars</string>
    <string name="weather_tab_text">Weather</string>
    <string name="exit_tab_text">Exit</string>
    <string name="planets">Планеты</string>

    <!-- Для списка с примерами RecyclerView -->
    <string name="title_lists">Примеры RecyclerView</string>
    <string name="list">Список</string>
    <string name="different_types_items">Разные типы ItemType</string>
    <string name="recycler_change_items">Изменяемый список ItemType</string>
    <string name="test_n">\n</string>

    <!-- Рассказ о Земле -->
    <string name="free_text_about_earth">Земля́ — третья по удалённости от Солнца планета
        Солнечной системы. Самая плотная, пятая по диаметру и массе среди всех планет
        Солнечной системы и крупнейшая среди планет земной группы, в которую входят также
        Меркурий, Венера и Марс. Единственное известное человеку в настоящее время тело во
        Вселенной, населённое живыми организмами.

В публицистике и научно-популярной литературе могут использоваться синонимические термины —
        мир, голубая планета[16][17][18], Терра (от лат. Terra).

Научные данные указывают на то, что Земля образовалась из солнечной туманности около
        4,54 миллиарда лет назадПерейти к разделу «#История Земли»[19] и вскоре после
        этого обрела свой единственный естественный спутник — Луну. Жизнь, предположительно,
        появилась на Земле примерно 4,25 млрд лет назад[20], то есть вскоре после её
        возникновенияПерейти к разделу «#Возникновение жизни». С тех пор биосфера Земли
        значительно изменила атмосферу и прочие абиотические факторы, обусловив количественный
        рост аэробных организмов, а также формирование озонового слоя, который вместе с
        магнитным полем Земли ослабляет вредную для жизни солнечную радиацию[21], тем самым
        сохраняя условия существования жизни на Земле. Радиация, обусловленная самой земной
        корой, со времён её образования значительно снизилась благодаря постепенному распаду
        радионуклидов, содержавшихся в ней. Кора Земли разделена на несколько сегментов, или
        тектонических плит, которые движутся по поверхности со скоростями порядка нескольких
        сантиметров в год. Изучением состава, строения и закономерностей развития Земли
        занимается наука геологияПерейти к разделу «#Внутреннее строение».

Приблизительно 70,8 % поверхности планеты занимает Мировой океан[22], остальную часть поверхности
        занимают континенты и острова. На материках расположены реки, озёра, подземные воды и
        льды, которые вместе с Мировым океаном составляют гидросферуПерейти к разделу
        «Гидросфера». Жидкая вода, необходимая для всех известных жизненных форм, не
        существует на поверхности какой-либо из известных планет и планетоидов Солнечной
        системы, кроме Земли. Полюсы Земли покрыты ледяным панцирем, который включает в
        себя морской лёд Арктики и антарктический ледяной щит.</string>

    <string name="large_text_mars">Марс — четвёртая по удалённости от Солнца и седьмая по
        размерам планета Солнечной системы. Названа в честь Марса - древнеримского бога войны,
        соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за
        красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).
    </string>

    <string name="large_text_earth">Земля́ — третья по удалённости от Солнца планета Солнечной
        системы. Самая плотная, пятая по диаметру и массе среди всех планет Солнечной системы и
        крупнейшая среди планет земной группы, в которую входят также Меркурий, Венера и Марс.
        Единственное известное человеку в настоящее время тело во Вселенной, населённое живыми
        организмами.
    </string>
</resources>